--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                     <div class="col-lg-3 col-12 col-md-12 pb-2 d-flex justify-content-center">
                         <img style="border-radius:10px" class="img-fluid" src="images/hero.png">
                     </div>
-                    <div class="col-lg-2 col-md-3 pb-2">
+                    <div class="col-lg-2 col-6 col-md-3 pb-2">
                         <div class="card text-center">
                             <div class="card-body">
                                 <h5 class="card-title">100M+</h5>
@@ -562,7 +562,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-3 pb-2">
+                    <div class="col-lg-2 col-6 col-md-3 pb-2">
                         <div class="card text-center">
                             <div class="card-body">
                                 <h5 class="card-title">250K+</h5>
@@ -571,7 +571,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-3 pb-2">
+                    <div class="col-lg-2 col-6 col-md-3 pb-2">
                         <div class="card text-center">
                             <div class="card-body">
                                 <h5 class="card-title">52K+</h5>
@@ -580,7 +580,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-2 col-md-3 pb-2">
+                    <div class="col-lg-2 col-6 col-md-3 pb-2">
                         <div class="card text-center">
                             <div class="card-body">
                                 <h5 class="card-title">7K+</h5>
