--- a/register/index.html
+++ b/register/index.html
@@ -90,7 +90,7 @@
           </ul>
         </div>
         <div class="col-12 col-sm-5 text-right ibc_img">
-          <video onclick="this.paused ? this.play() : this.pause();" width="100%" height="100%" style="border-radius:8px">
+          <video onclick="this.paused ? this.play() : this.pause();" poster="images/poster.png" width="100%" height="100%" style="border-radius:8px">
             <source src="videos/1.mp4" type="video/mp4">
             <object data="videos/1.mp4" width="100%" height="100%">
             </object>
