--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">HOW TO START A STARTUP</h1>
-                <p class="text-center">Secrets that generated me over <strong>250K+ followers</strong>, and
-                    <strong>1000’s of leads</strong> for FREE bringing in <strong>thousands of dollars</strong> on a
-                    monthly basis from Linkedin.</p>
             </div>
             <div class="col-lg-6 col-md-6 pt-4">
                 <div class="row">
@@ -61,6 +58,31 @@
                 <a href="register" class="btn btn-primary d-block">
                     <h4>Register Now</h4>
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section 2 -->
+    <section id="section-2" class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 pt-4">
+                <h1 class="text-center">How to start a startup?</h1>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <p><img class="img-fluid" src="images/tick.svg"> Steps to build on your startup idea</p>
+                <p><img class="img-fluid" src="images/tick.svg"> Learn to manage investor relations</p>
+                <p><img class="img-fluid" src="images/tick.svg"> Know fundamentals behinf fund raising</p>
+                <p><img class="img-fluid" src="images/tick.svg"> Learn how to hire your team</p>
+                <p><img class="img-fluid" src="images/tick.svg"> Know about ESOPs and how to use them to hire great talent</p>
+                <p><img class="img-fluid" src="images/tick.svg"> Learn ways to market your products in the case of low budget</p>
+                <p><img class="img-fluid" src="images/tick.svg"> Avoid mistakes that leads to startup failure</p>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <video onclick="this.paused ? this.play() : this.pause();" poster="images/poster.png" width="100%" height="100%" style="border-radius:8px">
+                    <source src="videos/1.mp4" type="video/mp4">
+                    <object data="videos/1.mp4" width="100%" height="100%">
+                    </object>
+                </video>
             </div>
         </div>
     </section>
@@ -178,30 +200,39 @@
                     <div class="col-lg-3 col-12 col-md-12 pb-2 d-flex justify-content-center">
                         <img style="border-radius:10px" class="img-fluid" src="images/hero.png">
                     </div>
-                    <div class="col-lg-3 col-6 col-md-3 pb-2">
+                    <div class="col-lg-2 col-6 col-md-3 pb-2">
                         <div class="card text-center">
                             <div class="card-body">
-                                <h5 class="card-title">100M+</h5>
-                                <p class="card-text">impressions</p>
-                                <img width="30px" class="img-fluid" src="images/section-7/1.svg">
+                                <h5 class="card-title">17.3M+</h5>
+                                <p class="card-text">subscriber</p>
+                                <img width="50px" class="img-fluid" src="images/section-7/1.svg">
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-6 col-md-3 pb-2">
+                    <div class="col-lg-2 col-6 col-md-3 pb-2">
                         <div class="card text-center">
                             <div class="card-body">
-                                <h5 class="card-title">250K+</h5>
-                                <p class="card-text">followers</p>
-                                <img width="30px" class="img-fluid" src="images/section-7/1.svg">
+                                <h5 class="card-title">1.1B+</h5>
+                                <p class="card-text">views</p>
+                                <img width="50px" class="img-fluid" src="images/section-7/1.svg">
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-6 col-md-3 pb-2">
+                    <div class="col-lg-2 col-6 col-md-3 pb-2">
                         <div class="card text-center">
                             <div class="card-body">
-                                <h5 class="card-title">52K+</h5>
+                                <h5 class="card-title">2.6M+</h5>
                                 <p class="card-text">followers</p>
-                                <img width="30px" class="img-fluid" src="images/section-7/2.svg">
+                                <img width="50px" class="img-fluid" src="images/section-7/2.svg">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-6 col-md-3 pb-2">
+                        <div class="card text-center">
+                            <div class="card-body">
+                                <h5 class="card-title">200K+</h5>
+                                <p class="card-text">followers</p>
+                                <img width="50px" class="img-fluid" src="images/section-7/3.svg">
                             </div>
                         </div>
                     </div>
