--- a/index.html
+++ b/index.html
@@ -130,16 +130,12 @@
                     <div class="col-lg-4 col-md-6 pb-2">
                         <div class="card service-card">
                             <div class="card-body">
-                                <img class="img-fluid" src="images/section-3/2.svg">
-                                <h5 class="card-title pt-2">Sales Professional</h5>
-                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Find top-shelf active
-                                    prospects</p>
-                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Increased replies
-                                    from prospects</p>
-                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Land content-driven
-                                    leads</p>
-                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Skyrocket visibility
-                                    and authority</p>
+                                <img class="img-fluid" src="images/section-3/4.svg">
+                                <h5 class="card-title pt-2">Entrepreneurs</h5>
+                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Get inbound leads and clients</p>
+                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Get found by investors</p>
+                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Skyrocket authority and credibility</p>
+                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Build strong PR organically</p>
                             </div>
                         </div>
                     </div>
@@ -193,7 +189,7 @@
     <section id="section-7" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Meet Your Mentor</h1>
+                <h1 class="text-center">Meet Your Guru</h1>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
