minor changes in content

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     clients</p>
                                 <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Land new leads and
                                     customers</p>
-                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Have conversation at
+                                <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Have convo at
                                     scale using content</p>
                                 <p class="card-text"><img class="img-fluid" src="images/tick.svg"> Skyrocket visibility
                                     and authority</p>
