benefit-card added

--- a/index.html
+++ b/index.html
@@ -91,6 +91,141 @@
     <section id="section-3" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
+                <h1 class="text-center">If you register, What is your benifits?</h1>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Growth.png"> 10X your business growth</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Globally reach.png"> Reach customers globally</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Solutions.png"> Get solution to all business problems</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Expenses.png"> Reduction in overhead expenses</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Challenges.png"> Overcome day to day business</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Decsiosn making skills.png"> Better decision making</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Returns.png"> Increased Return on Investment</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Business automation.png"> Business sales up via business automation</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/EMploymet.png"> Increased employee productivity</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/MOney recover.png"> Recover money stuck in market</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Rating (1).png"> More customer satisfaction</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Brand building.png"> Better brand building</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Revenue.png"> Generate new sources of revenue</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/MAnpower.png"> Right manpower hiring</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Decisions.png"> Improved decision making</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Sales.png"> Increased Sales</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/Startup.png"> Build a successful startup</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-6 pt-4">
+                <div class="card benefit-card">
+                    <div class="card-body">
+                        <p class="card-text text-white"><img width="50px" class="img-fluid" src="images/section-3/achieveing goals.png"> Faster achievement of goals</p>
+                    </div>
+                </div>
+            </div>    
+        </div>
+    </section>
+
+    <!-- Section 4 -->
+    <section id="section-4" class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">Still wondering if this opportunity is for you?</h1>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
@@ -144,8 +279,8 @@
         </div>
     </section>
 
-    <!-- Section 4 -->
-    <section id="section-4" class="container-fluid">
+    <!-- Section 5 -->
+    <section id="section-5" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">You are not the first one to join</h1>
@@ -185,8 +320,8 @@
         </div>
     </section>
 
-    <!-- Section 5 -->
-    <section id="section-5" class="container-fluid">
+    <!-- Section 6 -->
+    <section id="section-6" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">Time Is Running Out. Grab Your Spot Fast!</h1>
@@ -231,8 +366,8 @@
         </div>
     </section>
 
-    <!-- Section 6 -->
-    <section id="section-6" class="container-fluid">
+    <!-- Section 7 -->
+    <section id="section-7" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">Meet Your Guru</h1>
