--- a/index.html
+++ b/index.html
@@ -21,8 +21,22 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">HOW TO START A STARTUP</h1>
+                <h4 class="text-center">Secrets that generated me over 250K+ followers, and 1000’s of leads for FREE bringing in thousands of dollars on a monthly basis from Linkedin.</h4>
             </div>
-            <div class="col-lg-6 col-md-6 pt-4">
+            <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
+                <video onclick="this.paused ? this.play() : this.pause();" poster="images/poster.png" width="100%"
+                    height="100%" style="border-radius:8px">
+                    <source src="videos/1.mp4" type="video/mp4">
+                    <object data="videos/1.mp4" width="100%" height="100%">
+                    </object>
+                </video>
+            </div>
+            <div class="col-lg-12 col-md-12 pt-4">
+                <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
+                    <h4>Register Now</h4>
+                </a>
+            </div>
+            <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 pb-2">
                         <div class="card text-center">
@@ -49,19 +63,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-6 col-md-6 pt-4 d-flex justify-content-center">
-                <video onclick="this.paused ? this.play() : this.pause();" poster="images/poster.png" width="100%"
-                    height="100%" style="border-radius:8px">
-                    <source src="videos/1.mp4" type="video/mp4">
-                    <object data="videos/1.mp4" width="100%" height="100%">
-                    </object>
-                </video>
-            </div>
-            <div class="col-lg-12 col-md-12 pt-4">
-                <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
-                    <h4>Register Now</h4>
-                </a>
             </div>
         </div>
     </section>
@@ -361,12 +362,6 @@
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">You are not the first one to join</h1>
             </div>
-            <div class="col-2 pt-4"><img class="img-fluid" src="images/section-6/1.svg"></div>
-            <div class="col-2 pt-4"><img class="img-fluid" src="images/section-6/2.svg"></div>
-            <div class="col-2 pt-4"><img class="img-fluid" src="images/section-6/3.svg"></div>
-            <div class="col-2 pt-4"><img class="img-fluid" src="images/section-6/4.svg"></div>
-            <div class="col-2 pt-4"><img class="img-fluid" src="images/section-6/5.svg"></div>
-            <div class="col-2 pt-4"><img class="img-fluid" src="images/section-6/6.svg"></div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 p-2">
