--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
 
     <!-- Section 1 -->
-    <section id="section-1" class="container-fluid">
+    <section id="bg-1" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">HOW TO START A STARTUP</h1>
-                <h4 class="text-center">Secrets that generated me over 250K+ followers, and 1000’s of leads for FREE bringing in thousands of dollars on a monthly basis from Linkedin.</h4>
+                <h1 class="text-center">HOW TO START A STARTUP</h1><h4 class="text-center underline"></h4>
+                <h6 class="text-center pt-4">Secrets that generated me over 250K+ followers, and 1000’s of leads for FREE bringing in thousands of dollars on a monthly basis from Linkedin.</h6>
             </div>
             <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
                 <video onclick="this.paused ? this.play() : this.pause();" poster="images/poster.png" width="100%"
@@ -68,10 +68,10 @@
     </section>
 
     <!-- Section 2 -->
-    <section id="section-2" class="container-fluid">
+    <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">How to start a startup?</h1>
+                <h1 class="text-center">How to start a startup?</h1><h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-6 col-md-6 pt-4">
                 <p><img class="img-fluid" src="images/tick.svg"> Steps to build on your startup idea</p>
@@ -95,41 +95,43 @@
         </div>
     </section>
 
-    <!-- Section 6 -->
-    <section id="section-6" class="container-fluid">
+    <!-- Section 3 -->
+    <section id="bg-2" class="section-3 container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Time Is Running Out. Grab Your Spot Fast!</h1>
+                <h1 class="text-center">Time Is Running Out. Grab Your Spot Fast!</h1><h4 class="text-center underline"></h4>
             </div>
-            <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h5 id="days" class="card-title"></h5>
-                        <p class="card-text">Days</p>
+            <div class="row pt-4">
+                <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 id="days" class="card-title"></h5>
+                            <p class="card-text">Days</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h5 id="hours" class="card-title"></h5>
-                        <p class="card-text">Hours</p>
+                <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 id="hours" class="card-title"></h5>
+                            <p class="card-text">Hours</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h5 id="minutes" class="card-title"></h5>
-                        <p class="card-text">Minutes</p>
+                <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 id="minutes" class="card-title"></h5>
+                            <p class="card-text">Minutes</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <h5 id="seconds" class="card-title"></h5>
-                        <p class="card-text">Seconds</p>
+                <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <h5 id="seconds" class="card-title"></h5>
+                            <p class="card-text">Seconds</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -141,11 +143,11 @@
         </div>
     </section>
 
-    <!-- Section 3 -->
-    <section id="section-3" class="container-fluid">
+    <!-- Section 4 -->
+    <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">If you register, What is your benifits?</h1>
+                <h1 class="text-center">If you register, What is your benifits?</h1><h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-6 col-md-6 pt-4">
                 <div class="card benefit-card">
@@ -296,10 +298,10 @@
     </section>
 
     <!-- Section 4 -->
-    <section id="section-4" class="container-fluid">
+    <section id="bg-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Still wondering if this opportunity is for you?</h1>
+                <h1 class="text-center">Still wondering if this opportunity is for you?</h1><h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
@@ -360,7 +362,7 @@
     <section id="section-5" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">You are not the first one to join</h1>
+                <h1 class="text-center">You are not the first one to join</h1><h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
@@ -394,10 +396,10 @@
     </section>
 
     <!-- Section 7 -->
-    <section id="section-7" class="container-fluid">
+    <section id="bg-1" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Meet Your Guru</h1>
+                <h1 class="text-center">Meet Your Guru</h1><h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
